# ai-adoption-studio

./: .gitignore  README.md  pyproject.toml
docs/: README.md  assessment-question-set-internal-v1.json  eoi-question-set-v1.json
docs/design/: ADR-001-wizard-orchestration-boundaries.md  ADR-002-cursor-agent-certification.md  ADR-003-console-application.md  ADR-004-monsterui-web-wizard-v1.md  ARCH-adoption-studio-wizard-v1.md  BRD-adoption-studio-operator-wizard-v1.md  EXEC-SUMMARY-operator-wizard-v1.md  IMPLEMENTATION-PROMPT-v1.md  PIR-template-v1.md  PLAN-implementation-phases-v1.md  PRD-operator-wizard-v1.md  README.md  SPEC-cursor-agent-bridge-v1.md  SPEC-deployment-orchestration-v1.md  SPEC-dynamic-forms-v1.md  SPEC-live-status-aggregation-v1.md  SPEC-llm-test-selection-v1.md  SPEC-validation-ui-v1.md  SPEC-web-interface-v1.md  SPEC-wizard-state-model-v1.md  TEST-plan-wizard-v1.md  UX-component-catalog-v1.md  UX-wizard-flow-v1.md
src/ai_adoption_studio/: config.py  main.py
src/ai_adoption_studio/adapters/: control_centre_client.py  cursor_agent.py  delivery_validator.py  gateway_client.py  runtime_manager_client.py
src/ai_adoption_studio/api/: eoi.py
src/ai_adoption_studio/components/: branding_form.py  capability_picker.py  cursor_assist_panel.py  deploy_log_viewer.py  dynamic_form.py  goal_banner.py  manual_checklist.py  nav_buttons.py  recommendation_card.py  status_grid.py  stepper.py  validation_results.py
src/ai_adoption_studio/layouts/: base.py
tests/: test_dynamic_forms.py  test_golden_path.py  test_studio.py  test_wizard_service.py
(+24 files in other folders)
