[project]
name = "ai-adoption-studio"
version = "0.1.0"
description = "AI Adoption Factory — internal assessment and EOI intake"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "python-fasthtml>=0.12.0",
    "monsterui>=1.0.0",
    "ai-runtime-manager",
    "ai-platform",
]

[tool.uv.sources]
ai-runtime-manager = { path = "../ai-runtime-manager", editable = true }
ai-platform = { path = "../ai-platform-sdk", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_adoption_studio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
